16-section/_k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  # annotations is additional configuration for an object
  annotations:
    nginx.ingress.kubernetes.io/use-regex: 'true'
    # rewrite-target is used to rewrite the URL, in this case, we are removing the /api/ from the URL
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  # ingressClassName is the name of the ingress controller
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: client-cluster-ip
                port:
                  number: 3000
          - path: /api/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: server-cluster-ip
                port:
                  number: 5000
